Fix for WMS-7322: Z-index is set higher to the one defined on dialog form, this change will be applied to date, datetime and popup widgets in web project mobile view

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -1070,6 +1070,16 @@ body.modal-open {
   .modal {
     overflow-y: auto;
   }
+  .app-date, .app-datetime {
+    .uib-datepicker-popup {
+      &.dropdown-menu {
+        z-index: 1000000;
+      }
+    }
+  }
+  .app-popover {
+    z-index: 1000000;
+  }
 }
 .modal-backdrop {
   height: 100%;
